versioned_docs/version-1.16.x/wiki/utilitix/items.mdx
---
sidebar_position: 0
description: UtilitiX' items
---

# Items

## Hand Bell
The **Hand Bell** is an item that, when rung, highlights raiders similarly to a normal bell in Minecraft. This makes it
useful for locating and dealing with raiders during a raid. You can increase the range with
the [Bell Range](misc.mdx#bell-range) enchantment.

## Mob Bell
The **Mob Bell** can be bound to a mob by shift-right-clicking on it. When rung, it highlights mobs of the same type as
the bound mob, making it easier to locate specific types of mobs. You can increase the range with
the [Bell Range](misc.mdx#bell-range) enchantment.

## Gilding Crystal
The **Gilding Crystal** is used for gilding items, making Piglins friendlier and non-aggressive. It works the same as
golden armor but is available for *any* armor.

## Tiny Coal
The **Tiny Coal** is a small piece of coal that smelts exactly one item. It is efficient for single-item smelting tasks
without wasting excess fuel.

## Apple Juice
The **Apple Juice** is a consumable item that restores hunger. It is a quick and easy way to regain energy in the game.

## Mixed Potion
The **Mixed Potion** combines the effects of two different potions into one, allowing players to benefit from multiple
potion effects simultaneously. It is crafted using the [Advanced Brewery](blocks.mdx#advanced-brewery).

## Failed Potion
The **Failed Potion** is the result of a failed potion merge in the [Advanced Brewery](blocks.mdx#advanced-brewery).
Drinking it grants negative effects, so it should be used with caution.

## Armor Stand with Arms
The **Armor Stand with Arms** includes arms. The pose of the armor stand can be changed by shift-right-clicking it with
flint and configured in the settings.

## Glue Ball
The **Glue Ball** can be attached to the sides of solid blocks, making those blocks sticky. When pushed by a piston,
these sticky blocks will pull adjacent blocks with them. When sneaking, the glue will be attached to the opposite side
of the block you are looking at.

## Linked Redstone Crystal
The **Linked Redstone Crystal** allows players to link up to eight crystals together to create wireless redstone
connections. They can transmit redstone signals across different dimensions. To use them, you need to 'register' them by
right-clicking with a stack (at least two) in hand. This will link the stack to a network ID. If the stack already has
an ID, it will display the current signal strength of this network. The crystals can be used
in [Linked Repeaters](blocks.mdx#linked-repeater).

## Minecart Tinkerer
The **Minecart Tinkerer** is used to add labels to minecarts and some types of rails. It can also toggle additional
options for certain rails when right-clicked. This can be used for the [Filter Rail](blocks.mdx#filter-rail)
or [Piston Minecart Controller Rail](blocks.mdx#piston-minecart-controller-rail).
